syntax = "proto3";

import "chat/core/v1/user.proto";
import "chat/core/v1/message.proto";

option csharp_namespace = "ChatApp";
package chat.services.v1;

service Users {
    rpc SignUp(SignUpRequest) returns (chat.core.v1.User);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc UserInfo(UserInfoRequest) returns (chat.core.v1.User);
}

message UserInfoRequest {
    string user_id = 1;
}

message SignUpRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message LoginResponse {
    chat.core.v1.User user = 1;
    string jwt = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}